Trying to add automatic updating of added secrets

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -1,9 +1,11 @@
 <h2 class="sub-form">Tell a secret</h2>
+<%= javascript_include_tag "secret-bundle" %>
 
-<div class="form-fields inner-box">
-	<%= form_for [@user, @secret] do |f| %>
+<div class="form-fields inner-box" id="secrets-form">
+	<%= form_for [@user, @secret], data: {}, :remote => true do |f| %>
 	<p class="form-input"><%= f.label :title %>
 	<%= f.text_field :title %></p>
+
 	<p class="form-button"><%= f.submit "Submit" %></p>
 	<% end %>
 </div>
