working - Functional ajax secret adding

--- a/app/views/secrets/_form.html.erb
+++ b/app/views/secrets/_form.html.erb
@@ -2,7 +2,7 @@
 <%= javascript_include_tag "secret-bundle" %>
 
 <div class="form-fields inner-box" id="secrets-form">
-	<%= form_for [@user, @secret], data: {}, :remote => true do |f| %>
+	<%= form_for [@user, @secret], :remote => true do |f| %>
 	<p class="form-input"><%= f.label :title %>
 	<%= f.text_field :title %></p>
 
