--- a/app/views/secrets/create.js.erb
+++ b/app/views/secrets/create.js.erb
@@ -1,4 +1,6 @@
-// var secret = $("<li class='secret'> <ul class='secret-details'> <li class='recipient-name'><= j render(@secret.author_name) ></li> <li class='recipient-secret'> <= j render(@secret.title)> </li> </ul> </li>");
-// $("#secrets-form:submit").on("click", function() {
-// 	$("#recieved-secrets").append(secret);
-// });
+var secret = $("<li class='secret'> <ul class='secret-details'> <li class='recipient-name'> <%= j @secret.author.username.html_safe %> </li> <li class='recipient-secret'> <%= j @secret.title.html_safe %> </li> </ul> </li>");
+$("#recieved-secrets").prepend(secret);
+
+//$("div.secret-entry").html("<!--%= javascript_escape(render partial: 'secrets/form', locals: {:author_id => current_user.id, :recipient_id => @user.id}) %>");
+
+$("#secrets-form > form")[0].reset();//find('input:text').val('');
