--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 		<%= render partial: "secrets/form", locals: {:author_id => current_user.id, :recipient_id => @user.id} %>
 	</div>
 	<% end %>
-	<% if @user == current_user || current_user.id == 1 %>
+	<% if @user == current_user %>
 		<div class="secrets" id="recieved">
 			<h3>Recieved Secrets</h3>
 			<ul id="recieved-secrets">
